// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterItems renders correctly 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
      onClick={[Function]}
    >
      <CharacterItem
        id="1"
        name="Luke"
      />
    </div>
  </div>,
  <div
    className="MuiBox-root css-b4acux"
  >
    <Pagination
      color="primary"
      count={8}
      onChange={[MockFunction]}
      page={1}
      shape="rounded"
    />
  </div>,
]
`;

exports[`CharacterItems renders correctly with loading 1`] = `
Array [
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-iv7vbz-MuiGrid-root"
    >
      <CharacterItemSkeleton />
    </div>
  </div>,
  <div
    className="MuiBox-root css-b4acux"
  >
    <Pagination
      color="primary"
      count={8}
      onChange={[MockFunction]}
      page={1}
      shape="rounded"
    />
  </div>,
]
`;
